feat: enhance CORS configuration and security settings
- Fix CORS configuration with proper origin patterns and credentials handling
- Add highest precedence to CORS filter to ensure proper execution order
- Configure OPTIONS method handling for preflight requests
- Temporarily disable JWT authentication for development environment
- Update Swagger configuration for better API documentation
- Add API documentation controller for centralized docs access
- Remove conflicting global CORS configuration from application.yml